# django-in-product

./: .envrc.example  .gitignore  README.md  docker-compose.yml  docker-remake.sh  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/a_model/: apps.py  models.py
backend/api/: urls.py  views.py
backend/api/tests/: test_api.py
backend/async/: urls.py  views.py
backend/author/: admin.py  models.py
backend/author/migrations/: 0001_initial.py  0002_author2.py
backend/b_model/: apps.py
backend/blog/: admin.py  models.py
backend/blog/migrations/: 0001_initial.py
backend/bulk_create_trouble/: admin.py  apps.py  handlers.py  models.py
backend/bulk_create_trouble/management/commands/: do_bulk_create_many_to_many_model.py  do_bulk_create_no_multi_table_inheritance.py  do_bulk_create_no_signal.py
backend/bulk_create_trouble/migrations/: 0003_onemodel_manytomanymodel.py
backend/ch01_drf/api/: apps.py  versions.py
backend/ch01_drf/api/tests/: test_api.py
backend/ch02_orm/: README.md
backend/ch02_orm/a_model/: apps.py
backend/ch02_orm/a_model/migrations/: 0001_initial.py  0002_initial.py
backend/ch02_orm/async/: apps.py  urls.py  views.py
backend/ch02_orm/author/: admin.py  apps.py  models.py
backend/ch02_orm/b_model/: apps.py  models.py
backend/ch02_orm/b_model/migrations/: 0001_initial.py
backend/ch02_orm/blog/: admin.py  apps.py  models.py
backend/ch02_orm/blog/migrations/: 0001_initial.py  0002_blogauthor.py
backend/ch02_orm/bulk_create_trouble/: admin.py  apps.py  handlers.py
backend/ch02_orm/bulk_create_trouble/migrations/: 0001_initial.py  0002_basemodel_childmodel.py
backend/ch02_orm/data_optimization/: apps.py
backend/ch02_orm/data_optimization/migrations/: 0001_initial.py
backend/ch02_orm/fsm_model/: admin.py  apps.py  models.py
backend/ch02_orm/fsm_model/migrations/: 0001_initial.py  0002_alter_monitorpost_state.py
backend/ch02_orm/generic_foreign_key_model/: admin.py  apps.py  models.py
backend/ch02_orm/generic_foreign_key_model/migrations/: 0003_alter_genericforeignkeymodel_content_type.py  0004_alter_genericforeignkeymodel_content_type.py  0008_alter_genericforeignkeymodel_content_type.py
backend/ch02_orm/model_manager/: admin.py  apps.py
backend/ch02_orm/model_manager/migrations/: 0001_initial.py
backend/ch02_orm/or_create/: admin.py  apps.py
backend/ch02_orm/or_create/migrations/: 0001_initial.py
backend/ch02_orm/organized_model/: apps.py
backend/ch02_orm/organized_model/models/: __init__.py  comment.py
backend/ch02_orm/transaction_model/: admin.py  apps.py  models.py
backend/ch02_orm/transaction_model/migrations/: 0001_initial.py
backend/ch02_orm/util/: apps.py
backend/ch02_orm/uuid_model/: admin.py  apps.py  models.py
backend/ch02_orm/uuid_model/migrations/: 0001_initial.py
backend/ch03_drf_serialize/: README.md
backend/ch03_drf_serialize/model_serializer/: apps.py  models.py
backend/config/: settings.py  urls.py
backend/data_optimization/: apps.py  models.py
backend/data_optimization/management/commands/: get_bad_query.py  get_explain.py  get_n_plus_1.py  get_queryset.py
backend/fsm_model/: admin.py  apps.py  models.py
backend/fsm_model/migrations/: 0001_initial.py  0002_alter_monitorpost_state.py
backend/generic_foreign_key_model/: admin.py  apps.py  models.py
backend/generic_foreign_key_model/migrations/: 0001_initial.py  0002_alter_genericforeignkeymodel_content_type.py  0005_alter_genericforeignkeymodel_content_type.py  0006_alter_genericforeignkeymodel_content_type.py  0007_alter_genericforeignkeymodel_content_type.py
backend/model_manager/: admin.py  models.py
backend/or_create/: admin.py  apps.py  models.py
backend/or_create/management/commands/: get_update_or_create.py
backend/organized_model/: apps.py
backend/organized_model/migrations/: 0001_initial.py
backend/templates/: base.html
backend/transaction_model/: admin.py  apps.py
backend/util/management/commands/: get_by_raw_query.py  get_count.py  get_invoice_count.py  get_query_author.py  get_query_author2.py  get_query_blog.py  get_timezone.py  make_dummy_blog_author.py  (+4 more)
backend/uuid_model/: admin.py  apps.py
(+23 files in other folders)
