[project]
name = "django-in-product"
version = "0.1.0"
description = "Django in Product"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django==5.2.8",
    "djangorestframework==3.16.1",
]

[dependency-groups]
dev = [
    "django-stubs==5.2.7",
    "djangorestframework-stubs==3.16.5",
    "mypy==1.18.2",
    "pytest==9.0.1",
    "ruff==0.14.6",
]
